[tool.poetry]
name = "pyfsm"
version = "0.1.0"
description = ""
authors = ["nyvemm <joaovictorsawada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
